[gd_scene load_steps=17 format=3 uid="uid://blom6m76f51p2"]

[ext_resource type="Script" uid="uid://blk5lqo6fw711" path="res://scripts/ui/main_menu.gd" id="1_1yx65"]
[ext_resource type="Texture2D" uid="uid://bs3lw75levpyv" path="res://Assety/Menu/Background.png" id="1_abljk"]
[ext_resource type="Texture2D" uid="uid://cg1dbiksbit8i" path="res://Assety/Menu/New game/menu1.png" id="2_8w1fh"]
[ext_resource type="Texture2D" uid="uid://chcmbttad371r" path="res://Assety/Menu/New game/menu2.png" id="3_fvfg1"]
[ext_resource type="Texture2D" uid="uid://dllavyvbl0bot" path="res://Assety/Menu/New game/menu.png" id="4_fvfg1"]
[ext_resource type="Texture2D" uid="uid://dulvrxuteyyll" path="res://Assety/Menu/Load/load1.png" id="5_s2qla"]
[ext_resource type="Texture2D" uid="uid://dxk7v4lgl25mg" path="res://Assety/Menu/Load/load2.png" id="6_ovy64"]
[ext_resource type="Texture2D" uid="uid://4movt2f6mvcx" path="res://Assety/Menu/Load/load.png" id="7_1m3sb"]
[ext_resource type="Texture2D" uid="uid://bijktvw6ev5xs" path="res://Assety/Menu/Settings/settings1.png" id="8_mg4ns"]
[ext_resource type="Texture2D" uid="uid://rrgoi5l7ickl" path="res://Assety/Menu/Settings/settings2.png" id="9_6k2fh"]
[ext_resource type="Texture2D" uid="uid://1rq0dasm12g4" path="res://Assety/Menu/Settings/settings.png" id="10_5n5qq"]
[ext_resource type="Texture2D" uid="uid://cxi2r6prfm5au" path="res://Assety/Menu/Exit/exit1.png" id="11_tq1cm"]
[ext_resource type="Texture2D" uid="uid://dl1sqkyl3qfa8" path="res://Assety/Menu/Exit/exit2.png" id="12_ll4xq"]
[ext_resource type="Texture2D" uid="uid://se8l0bpgs5ya" path="res://Assety/Menu/Exit/exit.png" id="13_1yx65"]
[ext_resource type="FontFile" uid="uid://dkctivjq28eq8" path="res://Font/Jersey10-Regular.ttf" id="14_ll4xq"]
[ext_resource type="AudioStream" uid="uid://dyuf7rv3ygewx" path="res://Music/Misc/chronicles-of-valor-204107.mp3" id="16_2il0p"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1yx65")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("1_abljk")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -111.0
offset_top = -65.0
offset_right = 115.0
offset_bottom = 291.0
grow_horizontal = 2
grow_vertical = 2

[node name="New Game" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("2_8w1fh")
texture_pressed = ExtResource("3_fvfg1")
texture_hover = ExtResource("4_fvfg1")

[node name="Load" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("5_s2qla")
texture_pressed = ExtResource("6_ovy64")
texture_hover = ExtResource("7_1m3sb")

[node name="Settings" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("8_mg4ns")
texture_pressed = ExtResource("9_6k2fh")
texture_hover = ExtResource("10_5n5qq")

[node name="Exit" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("11_tq1cm")
texture_pressed = ExtResource("12_ll4xq")
texture_hover = ExtResource("13_1yx65")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -205.0
offset_top = -231.0
offset_right = 205.0
offset_bottom = -105.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("14_ll4xq")
theme_override_font_sizes/font_size = 90
text = "Test of Might"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_2il0p")
autoplay = true
bus = &"Music"

[connection signal="pressed" from="VBoxContainer/New Game" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="VBoxContainer/Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
